--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ mc_version=1.12.2
 forge_version=14.23.5.2768
 mappings_version=stable_39
 opencomputers_version=1.7.4.167
+jei_version=4.15.0.268
 
 # Misc
 org.gradle.jvmargs=-Xmx3G
